
4.8.2 (July 7, 2010)
-----------------------
- Fixed printable request form for Illumina HiSeq to show barcode (also other code that should test for both GAIIX and HiSeq like sample quality billing plug-in)
- Fixed billing summary report by lab to include HiSeq in Solexa totals.
- Work around unreachable orion dtd in datasources.xml by using dummy entity resolver in lucene BuildIndex java app

4.8.1 (Jul 6, 2010)
-----------------------
- Replaced seq lib treatments with request categories
- Order sequencing application radio buttons
- Added fk constraint on Request to Request Category


4.8 (Patch Jul 2, 2010)
------------------------
- Fixed bug that was causing actionscript error deep in renderer code.  Only happened when clicking on microarray experiment.  Fixed by adding hybs grid in MicroarrayState.

4.8 (July 1, 2010)
------------------------
-	Introduced Illumina HiSeq 2000 request category
-	Introduced new tab in Worfklow for Illumina HiSeq
-	Filter number sequencing cycles by request category (GAIIx vs HiSeq 2000)
-	Order radio buttons (ascending sort) for number seq cycles 
-	Order radio buttons for single vs. paired ends
-	Add notes to number sequencing cycles
-	Allow more than 1 sequencing lane per sample on Illumina new requests
-	Added PhiX error rate to Flow Cell Channel
-	Fixed bug in billing plug-in for Illumina sequencing that matched to incorrect price criteria
-	Add total PO debit and credit rows to Billing GL Interface and change journal entry name to 'MICROARRAY'
-	Billing 'approved' link now jumps to 'Approved (external)' rather than 'Approved'.
-	On experiments page, don't include request category and application in sort.  Sort be request number (descending) instead.
-	Disable request categories on submit request window, add services window if request category is inactive



4.7 patch (June 22, 2010)
------------------------
- Fix bug that was causing null reference on lab combo when non-admin user submitting a request